# agamirovstats

./: .dockerignore  .gitignore  Dockerfile  Makefile  Makefile.bak  Makefile.docker  Makefile.win  README.md  STATISTICAL_TESTS_README.md  docker-compose.yml  main.cpp
.claude/: settings.local.json
gui/: CMakeLists.txt  Info.plist  README.md  STUDENT_TEST_GUIDE.md
gui/include/: chartviewer.h  dataeditor.h  mainwindow.h  statisticsworker.h
gui/resources/: resources.qrc
gui/src/: chartviewer.cpp  dataeditor.cpp  main.cpp  mainwindow.cpp  mainwindow.cpp.bak  statisticsworker.cpp  statisticsworker.cpp.backup  statisticsworker.cpp.bak2  statisticsworker.cpp.bak3
gui/ui/: mainwindow.ui
include/: anova.h  boost_distributions.h  confidence_intervals.h  matrix_operations.h  mle_methods.h  nelder_mead.h  order.h  shapiro_wilk.h  statistical_tests.h  wilcoxon_ranksum.h
input/: data_censored_light.txt  data_censored_normal.txt  data_censored_normal_heavy.txt  data_censored_weibull.txt  data_censored_weibull_heavy.txt  data_normal.txt  data_normal_highvar.txt  data_normal_large.txt  data_normal_lowvar.txt  data_normal_outliers.txt  data_normal_small.txt  data_sample1.txt  data_sample2.txt  data_uniform.txt  data_weibull.txt  data_weibull_large.txt  data_weibull_outliers.txt  data_weibull_shape2.txt  data_weibull_shape3.txt  data_weibull_small.txt
python/: plot_anova.py  plot_confidence_intervals.py  plot_grubbs.py  plot_normal.py  plot_percentiles.py  plot_shapiro_wilk.py  plot_student.py  plot_t_distribution.py  plot_weibull.py  plot_wilcoxon_ranksum.py
src/: anova.cpp  boost_distributions.cpp  confidence_intervals.cpp  matrix_operations.cpp  mle_methods.cpp  mle_normal.cpp  mle_weibull.cpp  mls_normal.cpp  mls_weibull.cpp  nelder_mead.cpp  order.cpp  shapiro_wilk.cpp  statistical_tests.cpp  wilcoxon_ranksum.cpp
test/: test_mle_normal.cpp  test_mle_weibull.cpp  test_mls_normal.cpp  test_mls_weibull.cpp
winforms/: README.md  StatisticalAnalysisWinForms.sln  StatisticalAnalysisWinForms.vcxproj
winforms/include/: MainForm.h
winforms/src/: MainForm.cpp  main.cpp
